// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commands should work with config 1`] = `
Object {
  "stderr": "⚡ - Loading configurations from /whook/packages/whook-example/dist/config/test/config.
",
  "stdout": "\\"localhost\\"
",
}
`;

exports[`commands should work with env 1`] = `
Object {
  "stderr": "⚡ - Loading configurations from /whook/packages/whook-example/dist/config/test/config.
🖥 - Using local env.
",
  "stdout": "test
",
}
`;

exports[`commands should work with ls 1`] = `
Object {
  "stderr": "⚡ - Loading configurations from /whook/packages/whook-example/dist/config/test/config.
",
  "stdout": "

# Provided by \\"@whook/example\\": 2 commands
- printEnv: A command printing every env values
- terraformValues: A command printing lambdas informations for Terraform


# Provided by \\"@whook/aws-lambda\\": 3 commands
- testConsumerLambda: A command for testing AWS consumer lambda
- testCronLambda: A command for testing AWS cron lambda
- testHTTPLambda: A command for testing AWS HTTP lambda


# Provided by \\"@whook/cli\\": 6 commands
- config: A simple program that returns the queryed config value
- create: A command helping to create new Whook files easily
- env: A command printing env values
- handler: Runs the given server handler for testing purpose
- inspect: A simple program that returns the result of the injected service
- ls: Print available commands


# Provided by \\"@whook/cors\\": none


# Provided by \\"@whook/whook\\": none
",
}
`;
